# monorepo-documents

./: Makefile  README.md  docker-compose.yaml
docs/: Dockerfile  service1-docs.json  service2-docs.json  service3-docs.json  swagger-config.json
python/services/service1/: pyproject.toml
python/services/service1/service1/: config.py
python/services/service1/tests/: test_service1.py
python/services/service2/: pyproject.toml
python/services/service2/service2/: config.py  main.py
python/services/service2/tests/: test_service2.py
python/services/service3/: pyproject.toml
python/services/service3/service3/: config.py  docs.py
python/services/service3/tests/: test_service3.py
scripts/: docs.sh  merge-docs.sh
