[tool.poetry]
name = "service3"
version = "0.1.0"
description = ""
authors = ["Junpei Tsuji <junpei.tsuji.ams@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
